# Artifex

./: .gitattributes  package.json
agent/: .env  PROTOCOL.md  __init__.py  evolution.py  fitness.py  forgebot.py  llm_client.py  mock_sim.py  primitives.py  pyproject.toml  requirements.txt  server.py  skill_registry.py  test_chat.py  tool_registry.py
agent/memory/skills/: remove_all_cubes.json
agent/memory/tools/: add_ball.json  add_ball_on_patch.json  add_ball_on_surface.json  add_big_ball.json  add_bowl.json  add_cup.json  add_football_at_position.json  add_football_on_patch.json  add_football_on_surface.json  add_goal_post.json  add_hockey_puck.json  add_patch_and_football.json  add_stick.json  add_stick_simple.json  add_stick_v2.json  attach_bat.json  attach_hockey_stick.json  attach_hockey_stick_gripper.json  attach_stick_gripper.json  clear_and_add_football.json  gripper_assisted_drop_v5.json  reset_football.json  resilient_scan.json  strike_ball.json  strike_ball_simple.json
agent/prompts/: evolution_code.py  evolution_geometry.py
docs/: robotics.md
sim/: App.tsx  FrankaAnalyticalIK.ts  IkSystem.ts  MujocoSim.ts  RobotLoader.ts  SequenceAnimator.ts  SimBridge.ts  ToolLoader.ts  agentBridge.ts  index.css  index.html  inventedToolsStore.ts  package-lock.json  package.json  robotTools.ts  toolCallStore.ts  types.ts  vite  vlmgineer.ts
sim/components/: ChatPanel.tsx  Header.tsx  RobotSelector.tsx  SimulationHUD.tsx  ToolRegistry.tsx  Toolbar.tsx  UnifiedSidebar.tsx  goal.stl
sim/components/assistant-ui/: thread.tsx
sim/data/: toolData.ts
